--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,8 @@
   <script type="module" src="./js/main.jsx"></script>
 </head>
 
-<body class="w-100 min-vh-100">
-  <div class="min-h-100">
+<body class="w-100 vh-100">
+  <div class="h-100">
     <div class="container" id="markdown-previever"></div>
   </div>
 
